# codex

./: AGENTS.md
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  transport.rs
codex-rs/cli/src/: main.rs
codex-rs/core/: BUILD.bazel  config.schema.json  models.json  root_agent_prompt.md  subagent_prompt.md  watchdog_agent_prompt.md
codex-rs/core/src/: codex.rs  codex_delegate.rs  codex_tests.rs  codex_tests_guardian.rs  codex_thread.rs  exec_policy.rs  features.rs  hybrid_router.rs  lib.rs  model_provider_info.rs  stream_events_utils.rs  thread_manager.rs
codex-rs/core/src/agent/: control.rs  (+2 more)
codex-rs/exec/src/: cli.rs  lib.rs  main.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/protocol/src/: models.rs  protocol.rs
codex-rs/state/src/: extract.rs
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  cli.rs  history_cell.rs  lib.rs  oss_selection.rs  slash_command.rs
codex-rs/utils/oss/: Cargo.toml
codex-rs/vllm/: Cargo.toml
codex-rs/vllm/src/: client.rs  cluster.rs  lib.rs  model_manager.rs
deploy/dev-proxy/: README.md  proxy.py
deploy/dgx-spark/configs/: config.toml
deploy/dgx-spark/docker/: docker-compose.yml
deploy/dgx-spark/scripts/: check-cluster.sh  download-model.sh  setup-cluster.sh
docs/: config.md  dgx-spark-setup.md  hybrid-mode-design.md  hybrid-mode.md
sdk/python/: README.md
sdk/python/docs/: api-reference.md  faq.md  getting-started.md
sdk/python/examples/: README.md
sdk/python/notebooks/: sdk_walkthrough.ipynb
(+108 files in other folders)
