[package]
name = "codex-vllm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_vllm"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-core = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing = { version = "0.1", features = ["log"] }
indicatif = { version = "0.17", features = ["tokio"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
